--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
           <h1 class="text-balance text-5xl font-semibold tracking-tight text-gray-900 sm:text-7xl">Newsletter swap for founders</h1>
           <p class="mt-8 text-lg font-normal text-gray-500 sm:text-xl/8">Close-knit members-only community of founders to share secrets with other founders</p>
           <div class="mt-10 flex items-center justify-center gap-x-6">
-            <a href="#" class="rounded-md bg-primary-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-primary-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Start swapping</a>          </div>
+            <a href="/apply" class="rounded-md bg-primary-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-primary-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Start swapping</a>          </div>
         </div>
       </div>
     </div>
