--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -1,16 +1,19 @@
 <% meta title: "Apply", description: "Apply to Founders Digest" %>
 
 <div class="min-h-screen flex flex-col items-center py-12 px-4 sm:px-6 lg:px-8">
-  <div class="max-w-md w-full">
-    <%= render 'shared/heading', title: 'Apply to Founders Digest', description: 'Each submission is manually reviewed by our team within 24 hours
-' %>
-
+    <%= render 'shared/heading', title: 'Apply to Founders Digest', description: 'Each submission is manually reviewed by our team within 24 hours' %>
+    <div class="max-w-md w-full">
     <%= form_with(url: apply_path, method: :post, class: "mt-8 space-y-6") do |f| %>
       <div class="space-y-6">
         <div>
-          <%= f.label :name, "What's your name?", class: "block text-sm font-medium text-gray-700" %>
-          <%= f.text_field :name, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
+          <%= f.label :first_name, "What's your first name?", class: "block text-sm font-medium text-gray-700" %>
+          <%= f.text_field :first_name, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
         </div>
+
+        <div>
+            <%= f.label :last_name, "Last name?", class: "block text-sm font-medium text-gray-700" %>
+            <%= f.text_field :last_name, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
+          </div>
 
         <div>
           <%= f.label :email, "What's your work email?", class: "block text-sm font-medium text-gray-700" %>
@@ -23,26 +26,26 @@
         </div>
 
         <div>
-          <%= f.label :role, "What's your role?", class: "block text-sm font-medium text-gray-700" %>
+          <%= f.label :job_role, "What's your role?", class: "block text-sm font-medium text-gray-700" %>
           <div class="mt-2 space-x-4">
             <label class="inline-flex items-center">
-              <%= f.radio_button :role, "operator", class: "form-radio text-primary-600" %>
+              <%= f.radio_button :job_role, "operator", class: "form-radio text-primary-600" %>
               <span class="ml-2 text-sm font-normal text-gray-700">Operator</span>
             </label>
             <label class="inline-flex items-center">
-              <%= f.radio_button :role, "founder", class: "form-radio text-primary-600" %>
+              <%= f.radio_button :job_role, "founder", class: "form-radio text-primary-600" %>
               <span class="ml-2 text-base text-sm font-normal text-gray-700">Founder</span>
             </label>
             <label class="inline-flex items-center">
-              <%= f.radio_button :role, "employee", class: "form-radio text-primary-600" %>
+              <%= f.radio_button :job_role, "employee", class: "form-radio text-primary-600" %>
               <span class="ml-2 text-base text-sm font-normal text-gray-700">Employee</span>
             </label>
           </div>
         </div>
 
         <div>
-          <%= f.label :update, "Paste a snippet of your most recent stakeholder update?", class: "block text-sm font-medium text-gray-700" %>
-          <%= f.text_area :update, required: true, rows: 4, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
+          <%= f.label :text, "Paste a snippet of your most recent stakeholder update?", class: "block text-sm font-medium text-gray-700" %>
+          <%= f.text_area :text, required: true, rows: 4, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
           <p class="mt-1 text-sm text-gray-500">Applicants with an existing websites will be prioritised</p>
         </div>
 
