--- a/app/views/pages/start.html.erb
+++ b/app/views/pages/start.html.erb
@@ -1,55 +1,21 @@
-<% meta title: "Start", description: "You're in! Please give us more details below" %>
+<% meta title: "Start", description: "Please give us more details below" %>
 
 <div class="min-h-screen flex flex-col items-center py-12 px-4 sm:px-6 lg:px-8">
-    <%= render 'shared/heading', title: 'You're in!', description: 'Please give us more details below' %>
+    <%= render 'shared/heading', title: 'Welcome', description: 'Please give us more details below' %>
     <div class="max-w-md w-full">
     <%= form_with(url: apply_path, method: :post, class: "mt-8 space-y-6") do |f| %>
       <div class="space-y-6">
         <div>
-          <%= f.label :first_name, "What's your first name?", class: "block text-sm font-medium text-gray-700" %>
+          <%= f.label :first_name, "What's your stakeholder update called?", class: "block text-sm font-medium text-gray-700" %>
           <%= f.text_field :first_name, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
         </div>
 
         <div>
-            <%= f.label :last_name, "Last name?", class: "block text-sm font-medium text-gray-700" %>
-            <%= f.text_field :last_name, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
-          </div>
-
-        <div>
-          <%= f.label :email, "What's your work email?", class: "block text-sm font-medium text-gray-700" %>
-          <%= f.email_field :email, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
+          <%= f.label :text, "Please describe your digest in 10 words or fewer", class: "block text-sm font-medium text-gray-700" %>
+          <%= f.text_field :text, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
         </div>
 
-        <div>
-          <%= f.label :website, "What's your website?", class: "block text-sm font-medium text-gray-700" %>
-          <%= f.url_field :website, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
-        </div>
-
-        <div>
-          <%= f.label :job_role, "What's your role?", class: "block text-sm font-medium text-gray-700" %>
-          <div class="mt-2 space-x-4">
-            <label class="inline-flex items-center">
-              <%= f.radio_button :job_role, "operator", class: "form-radio text-primary-600" %>
-              <span class="ml-2 text-sm font-normal text-gray-700">Operator</span>
-            </label>
-            <label class="inline-flex items-center">
-              <%= f.radio_button :job_role, "founder", class: "form-radio text-primary-600" %>
-              <span class="ml-2 text-base text-sm font-normal text-gray-700">Founder</span>
-            </label>
-            <label class="inline-flex items-center">
-              <%= f.radio_button :job_role, "employee", class: "form-radio text-primary-600" %>
-              <span class="ml-2 text-base text-sm font-normal text-gray-700">Employee</span>
-            </label>
-          </div>
-        </div>
-
-        <div>
-          <%= f.label :text, "Paste a snippet of your most recent stakeholder update?", class: "block text-sm font-medium text-gray-700" %>
-          <%= f.text_area :text, required: true, rows: 4, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
-          <p class="mt-1 text-sm text-gray-500">Applicants with an existing websites will be prioritised</p>
-        </div>
-
-        <%= f.submit "Apply to Founders Digest", class: "w-full flex justify-center py-2.5 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500" %>
+        <%= f.submit "Continue to dashboard", class: "w-full flex justify-center py-2.5 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500" %>
       </div>
     <% end %>
   </div>
