added a local and partial to the new stakeholder updates page

--- a/app/views/stakeholder_updates/new.html.erb
+++ b/app/views/stakeholder_updates/new.html.erb
@@ -1,1 +1,1 @@
-this is a new stakeholder update
+<%= render partial: "shared/heading", locals: { title: 'Share an update', description: 'Describe your most recent thoughts' } %>
