I added a text box area from Tailwind to the stakeholders new page.

--- a/app/views/stakeholder_updates/new.html.erb
+++ b/app/views/stakeholder_updates/new.html.erb
@@ -1,1 +1,10 @@
 <%= render partial: "shared/heading", locals: { title: 'Share an update', description: 'Describe your most recent thoughts' } %>
+
+<div class="space-y-4 max-w-3xl text-center mx-auto">
+    <div class="mt-2">
+      <textarea rows="4" name="comment" id="comment" class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6"></textarea>
+    </div>
+    <button type="button" class="rounded-full bg-white px-4 py-2.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">Button text</button>
+
+</div>
+  
