--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,6 +17,8 @@
 
     <div id="main-nav" class="w-full flex-grow sm:flex text-right sm:w-auto hidden" data-header-target="mainNav">
       <div class="text-sm sm:flex-grow">
+        <!-- TODO: Ensure only admin can see the admin page -->
+        <a class="<%= nav_link_classes %>" href="/admin">Admin</a>
         <a class="<%= nav_link_classes %>" href="/dashboard">Dashboard</a>
         <a class="<%= nav_link_classes %>" href="/logout">Logout</a>
 
