--- a/app/views/admin/pages/dashboard.html.erb
+++ b/app/views/admin/pages/dashboard.html.erb
@@ -2,6 +2,12 @@
   title: 'Admin', 
   description: 'Accept or reject applications' %>
 
+<%= simple_form_for @user do |f| %>
+  <%= f.input :username %>
+  <%= f.input :password %>
+  <%= f.button :submit %>
+<% end %>
+
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
   <div class="mt-8 flex flex-col">
     <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
