modified the /apply page so that I check if I am retrieving the right params. I wanted to retrieve the paremeters from the free/paid plan, and I am able to do it accordingly

--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -1,6 +1,6 @@
 <% meta title: "Apply", description: "Apply to Founders Digest" %>
 
-<p>Params: <%= params %> </p>
+<p>Plan chosen: <%= params[:plan] %> </p>
 
 <div class="min-h-screen flex flex-col items-center py-12 px-4 sm:px-6 lg:px-8">
     <%= render 'shared/heading', title: 'Apply to Founders Digest', description: 'Each submission is manually reviewed by our team within 24 hours' %>
