--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -1,12 +1,13 @@
 <% meta title: "Apply", description: "Apply to Founders Digest" %>
 
-<p>Plan chosen: <%= params[:plan] %> </p>
+<!-- <p>Plan chosen: <%= params[:plan] %> </p> -->
 
 <div class="min-h-screen flex flex-col items-center py-12 px-4 sm:px-6 lg:px-8">
     <%= render 'shared/heading', title: 'Apply to Founders Digest', description: 'Each submission is manually reviewed by our team within 24 hours' %>
     <div class="max-w-md w-full">
-    <%= form_with(url: apply_path, method: :post, class: "mt-8 space-y-6") do |f| %>
+    <%= form_with(model: UserSubmission.new, local: true, class: "mt-8 space-y-6") do |f| %>
       <div class="space-y-6">
+        <input type="hidden" name="plan" value="<%= params[:plan] %>">
         <div>
           <%= f.label :first_name, "What's your first name?", class: "block text-sm font-medium text-gray-700" %>
           <%= f.text_field :first_name, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
