in the past sections, the user_submissions model didnt still have the plan_name attribute, so implemented the changes so that the model receives this attribute as well
rails g migration AddPlanNameToUserSubmissions plan_name:string

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -114,7 +114,7 @@
             24-hour support response time
           </li>
         </ul>
-        <a href="/apply?plan=free" aria-describedby="tier-hobby" class="mt-8 block rounded-md px-3.5 py-2.5 text-center text-sm font-semibold text-primary-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 sm:mt-10">Free Tier</a>
+        <a href="/apply?plan_name=free" aria-describedby="tier-hobby" class="mt-8 block rounded-md px-3.5 py-2.5 text-center text-sm font-semibold text-primary-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 sm:mt-10">Free Tier</a>
       </div>
       <div class="relative rounded-3xl bg-gray-900 p-8 shadow-2xl ring-1 ring-gray-900/10 sm:p-10">
         <h3 id="tier-enterprise" class="text-base/7 font-semibold text-primary-400">Enterprise</h3>
@@ -161,7 +161,7 @@
             Custom integrations
           </li>
         </ul>
-        <a href="/apply?plan=paid" aria-describedby="tier-enterprise" class="mt-8 block rounded-md bg-primary-500 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-primary-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 sm:mt-10">Paid tier</a>
+        <a href="/apply?plan_name=paid" aria-describedby="tier-enterprise" class="mt-8 block rounded-md bg-primary-500 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-primary-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 sm:mt-10">Paid tier</a>
       </div>
     </div>
   </div>
