--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -7,7 +7,7 @@
     <div class="max-w-md w-full">
     <%= form_with(model: UserSubmission.new, local: true, class: "mt-8 space-y-6") do |f| %>
       <div class="space-y-6">
-        <input type="hidden" name="plan" value="<%= params[:plan] %>">
+        <%= f.hidden_field :plan_name, value: params[:plan_name] %>
         <div>
           <%= f.label :first_name, "What's your first name?", class: "block text-sm font-medium text-gray-700" %>
           <%= f.text_field :first_name, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
