added a small UI tweak so that even if someone comes to the /apply page directly without having clicked on free or paid plans, they are assumed to be free as default in that case

--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -1,5 +1,7 @@
 <% meta title: "Apply", description: "Apply to Founders Digest" %>
 
+<%= plan_name = params[:plan_name] || 'free' %>
+
 <!-- <p>Plan chosen: <%= params[:plan] %> </p> -->
 
 <div class="min-h-screen flex flex-col items-center py-12 px-4 sm:px-6 lg:px-8">
