added namespace routes to the routes page.
I also updated the accept and reject mailer pages to also include the name and this directly comes in by just including a name tag because it follows the Rails conventions it can take the name from the user submissions model.

--- a/app/views/mailers/user_submission_mailer/reject.html.erb
+++ b/app/views/mailers/user_submission_mailer/reject.html.erb
@@ -1,1 +1,4 @@
-<p>Rejection email here</p>
+<p>Hi <%= @name %></p>
+
+<p>Your application has been reviewed, and we are excited to send you an rejection</p>
+
