--- a/app/views/mailers/user_submission_mailer/accept.html.erb
+++ b/app/views/mailers/user_submission_mailer/accept.html.erb
@@ -1,1 +1,5 @@
-<p>Acceptance email here</p>
+<p>Hi <%= @name %></p>
+
+<p>Your application has been reviewed, and we are excited to send you an invitation</p>
+
+<p>Get started here: << INSERT LINK HERE >> </p>
