ensured the flow from user submission to user creation is ready, until the email is also being delivered

--- a/app/views/mailers/user_submission_mailer/accept.html.erb
+++ b/app/views/mailers/user_submission_mailer/accept.html.erb
@@ -2,4 +2,13 @@
 
 <p>Your application has been reviewed, and we are excited to send you an invitation</p>
 
-<p>Get started here: << INSERT LINK HERE >> </p>
+<p></br>
+    <% base_url = Rails.env.production? ? "https://foundersdigest.com" : "http://localhost:3000" %>
+    Get started <a href="<%= base_url + '/login' %>">here</a>:<br>
+</p>
+
+<p>Username: <%= @email %></p>
+
+<p>Password: <%= @password %></p>
+
+<p>Founders Digest Team</p>
