fixed a bug in the way in which the user submission mailer and the user submission model were talking to each other. You were actually testing: When I create a user submission and then I do user submission to a variable as G and then I do G. accept exclamation mark I wanted to see if the mailer was working properly or not.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="flex items-center justify-between flex-wrap">
     <div class="flex items-center flex-no-shrink text-white mr-6">
       <!-- <% logo_path = current_user ? dashboard_index_path : root_path %> -->
-      <% logo_path = current_user ? root_path %>
+      <% logo_path = current_user ? root_path : root_path %>
       <%= link_to logo_path, class:"flex items-center hover:opacity-80" do %>
         <%= image_tag "avatar.png",  style: "max-height: 42px" %>
         <span class="font-semibold text-xl tracking-tight text-primary-600"><%= Rails.application.credentials.company_name %></span>
