--- a/app/views/pages/start.html.erb
+++ b/app/views/pages/start.html.erb
@@ -3,16 +3,16 @@
 <div class="min-h-screen flex flex-col items-center py-12 px-4 sm:px-6 lg:px-8">
     <%= render 'shared/heading', title: 'Welcome', description: 'Please give us more details below' %>
     <div class="max-w-md w-full">
-    <%= form_with(url: apply_path, method: :post, class: "mt-8 space-y-6") do |f| %>
+    <%= form_for Project.new, url: projects_path, method: :post do |f| %>
       <div class="space-y-6">
         <div>
-          <%= f.label :first_name, "What's your stakeholder update called?", class: "block text-sm font-medium text-gray-700" %>
-          <%= f.text_field :first_name, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
+          <%= f.label :title, "What's your stakeholder update called?", class: "block text-sm font-medium text-gray-700" %>
+          <%= f.text_field :title, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
         </div>
 
         <div>
-          <%= f.label :text, "Please describe your digest in 10 words or fewer", class: "block text-sm font-medium text-gray-700" %>
-          <%= f.text_field :text, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
+          <%= f.label :description, "Please describe your digest in 10 words or fewer", class: "block text-sm font-medium text-gray-700" %>
+          <%= f.text_field :description, required: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-500 focus:ring focus:ring-primary-500 focus:ring-opacity-50" %>
         </div>
 
         <%= f.submit "Continue to dashboard", class: "w-full flex justify-center py-2.5 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500" %>
